# relay

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  flake.nix  package-lock.json  package.json  tailwind.config.ts
.github/actions/extend-space-macos/: action.yaml
.github/workflows/: release-happ.yaml  release-tauri-app.yaml
brand/Volla Messages Icon/Vector/: Icon_Volla Messages.eps
dnas/relay/workdir/: dna.yaml
dnas/relay/zomes/coordinator/file_storage/: Cargo.toml
dnas/relay/zomes/coordinator/profiles/: Cargo.toml
dnas/relay/zomes/coordinator/relay/: Cargo.toml
dnas/relay/zomes/coordinator/relay/src/: config.rs  contact.rs  lib.rs  message.rs
dnas/relay/zomes/integrity/file_storage/: Cargo.toml
dnas/relay/zomes/integrity/profiles/: Cargo.toml
dnas/relay/zomes/integrity/relay/: Cargo.toml
dnas/relay/zomes/integrity/relay/src/: config.rs  contact.rs  lib.rs  message.rs
dnas/snapmail/workdir/: dna.yaml  happ.yaml
dnas/snapmail/zomes/snapmail/: Cargo.toml
dnas/snapmail/zomes/snapmail/src/: create_entry.rs  dm.rs  lib.rs
dnas/snapmail/zomes/snapmail_model/: Cargo.toml
dnas/snapmail/zomes/snapmail_model/src/: constants.rs  entry_types.rs  lib.rs  link_types.rs  properties.rs  validate.rs
src/: app.html
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/icons/squiggle/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: Header.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/conversations/: +page.svelte  +page.ts
src/routes/conversations/[hash]/: +page.svelte  +page.ts
tests/src/relay/relay/: all-messages.test.ts  common.ts  config.test.ts  message.test.ts
ui/: .prettierrc.json  eslint.config.js  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts  volla-theme.ts
ui/src/: app.d.ts  app.html  app.postcss  config.ts  hooks.client.ts  types.ts
ui/src/client/: ProfilesClient.ts  RelayConversationClient.ts  RelayDnaClient.ts  RelayOriginalClient.ts
ui/src/lib/: Avatar.svelte  Button.svelte  ConversationEmpty.svelte  ConversationSummary.svelte  Greet.svelte  Header.svelte  HiddenFileInput.svelte  LightboxImage.svelte  Message.svelte  MessageActions.svelte  MessageInput.svelte  PDFThumbnail.svelte  SvgIcon.svelte  background.ts  constants.ts  svgIcons.ts  translations.ts  utils.ts
ui/src/lib/translations/: dk
ui/src/lib/translations/bg/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/da/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/de/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/dk/: contacts.json  conversations.json  create.json
ui/src/lib/translations/en/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/es/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/fr/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/it/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/nl/: common.json  contacts.json  create.json
ui/src/lib/translations/no/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/ro/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/se /: common.json  contacts.json
ui/src/lib/translations/sk/: common.json  contacts.json  conversations.json  create.json
ui/src/lib/translations/sv/: common.json  contacts.json  conversations.json  create.json
ui/src/relay/relay/: types.ts
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/account/: +page.svelte
ui/src/routes/contacts/: ContactEditor.svelte
ui/src/routes/contacts/[id]/: +page.svelte  +page.ts
ui/src/routes/contacts/new/: +page.svelte
ui/src/routes/conversations/: +page.svelte  +page.ts
ui/src/routes/conversations/[hash]/: +page.server.ts  +page.svelte  +page.ts
ui/src/routes/conversations/[id]/: +page.server.ts  +page.svelte  +page.ts  ConversationEmpty.svelte  ConversationMembers.svelte  ConversationMessageInput.svelte  ConversationMessages.svelte  Message.svelte  MessageActions.svelte
ui/src/routes/conversations/archive/: +page.svelte
ui/src/routes/conversations/join/: +page.svelte
ui/src/routes/conversations/new/: +page.svelte
ui/src/routes/create/: +page.svelte
ui/src/routes/register/: +page.svelte
ui/src/routes/register/avatar/: +page.svelte
ui/src/routes/scan/: +page.svelte
ui/src/routes/share-key/: +page.svelte
ui/src/routes/welcome/: +page.svelte
ui/src/store/: AllContactsStore.ts  BucketStore.ts  Chat.ts  ChatStore.ts  ChatsList.ts  ContactStore.ts  ConversationAgentsStore.ts  ConversationHistoryBucketStore.ts  ConversationHistoryStore.ts  ConversationStore.ts  LocalStorageStore.ts  MessageHistoryStore.ts  ProfileCreateStore.ts  RelayClient.ts  RelayStore.ts  ScanStore.ts  UserStore.ts  bucket.ts  msgHistory.ts
ui/src/translations/: index.ts
ui/src/translations/bg/: common.json  contacts.json  conversations.json  create.json
ui/src/translations/da/: common.json  contacts.json  create.json
ui/src/translations/de/: common.json  contacts.json  create.json
ui/src/translations/en/: contacts.json  conversations.json  create.json
ui/src/translations/es/: contacts.json  conversations.json  create.json
ui/src/translations/fr/: common.json  conversations.json
ui/src/translations/it/: contacts.json  conversations.json
ui/src/translations/nl/: contacts.json  conversations.json  create.json
ui/src/translations/no/: common.json  contacts.json  conversations.json  create.json
ui/src/translations/ro/: common.json  contacts.json  conversations.json
ui/src/translations/sk/: contacts.json  create.json
ui/src/translations/sv/: contacts.json  create.json
ui/static/: splashscreen.html
workdir/: happ.yaml  web-happ.yaml
(+55 files in other folders)
