[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
lto = true
opt-level = "z"

[profile.release.build-override]
opt-level = "z"

[workspace]

members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74.0"
version = "0.0.1"

[workspace.dependencies]
hdi = "=0.4.0-beta-dev.30"
hdk = "=0.3.0-beta-dev.34"
holochain = "0.3.0-beta-dev.44"
serde = "1.0"

[workspace.dependencies.relay]
path = "dnas/relay/zomes/coordinator/relay"

[workspace.dependencies.relay_integrity]
path = "dnas/relay/zomes/integrity/relay"

[workspace.dependencies.profiles]
path = "dnas/relay/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/relay/zomes/integrity/profiles"

[workspace.dependencies.file_storage]
path = "dnas/relay/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/relay/zomes/integrity/file_storage"
