[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
lto = true
opt-level = "z"

[profile.release.build-override]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.1"
hdk = "0.3.1"
serde = "1.0"

[workspace.dependencies.file_storage]
path = "dnas/relay/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/relay/zomes/integrity/file_storage"

[workspace.dependencies.profiles]
path = "dnas/relay/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/relay/zomes/integrity/profiles"

[workspace.dependencies.relay]
path = "dnas/relay/zomes/coordinator/relay"

[workspace.dependencies.relay_integrity]
path = "dnas/relay/zomes/integrity/relay"

[workspace.package]
edition = "2021"
rust-version = "1.74.0"
version = "0.5.0-beta"

[patch.crates-io]
# Revert to crates.io once https://github.com/holochain/lair/issues/133 is fixed 
lair_keystore = { git = "https://github.com/guillemcordoba/lair", branch = "fix-sqlformat" }
lair_keystore_api = { git = "https://github.com/guillemcordoba/lair", branch = "fix-sqlformat" }
