[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
lto = true
opt-level = "z"
default-features = false

[profile.release.build-override]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
hdi = "0.5.0-rc"
hdk = "0.4.0-rc"
serde = "1.0"

[workspace.dependencies.file_storage]
path = "dnas/relay/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/relay/zomes/integrity/file_storage"

[workspace.dependencies.profiles]
path = "dnas/relay/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/relay/zomes/integrity/profiles"

[workspace.dependencies.relay]
path = "dnas/relay/zomes/coordinator/relay"

[workspace.dependencies.relay_integrity]
path = "dnas/relay/zomes/integrity/relay"

[workspace.package]
edition = "2021"
rust-version = "1.74.0"
version = "0.5.0-beta"
