[package]
name = "relayapp"
version = "0.5.0-beta"
description = "Relay"
authors = ["Tibet Sprague", "Eric Harris-Braun"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/p2p-shipyard"}
holochain_types = { version = "0.3.2" }
lair_keystore = { version = "0.4.0" }

holochain_client = { version = "0.5.0" }

log = "0.4"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"
tauri-plugin-sharesheet = { git = "https://github.com/buildyourwebapp/tauri-plugin-sharesheet" }
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
tauri-plugin-shell = "2.0.0-rc"
serde_json = "1"
holochain = { git ="https://github.com/holochain/holochain",branch="develop-0.3" }
